--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.5-lts.1",
     "pm2": "^5.2.2"
   },
   "devDependencies": {
