--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
+    "babel-node": "^0.0.1-security",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,5 +28,10 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "nodemon": "^2.0.20"
+  },
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git@kdt-gitlab.elice.io:sw_track/class_03/web_project/team15/project.git"
   }
 }
