--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node",
-    "dev": "nodemon index.js  --exec babel-node"
+    "build": "babel src -d dist",
+    "start": "node dist/index.js",
+    "dev": "nodemon index.js --exec babel-node  "
   },
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
