--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist",
-    "start": "node dist/index.js",
-    "dev": "nodemon index.js --exec babel-node  "
+    "start": "nodemon index.js --exec babel-node",
+    "dev": "nodemon index.js --exec babel-node"
   },
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
